remove old links and move extra css out of theme

--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -57,24 +57,63 @@
 						<li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">Twitter.com/{{ site.author.twitter }}</a></li>
 						<!-- <li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">Subscribe to RSS Feed</a></li> Jack commented out-->
 					</ul>
-					<h4>Projects</h4>
+					<h4>Personal Projects</h4>
 					<ul>
-						<li class="HousingTrend"><a href="https://github.com/xjlin0/HousingTrends">[Housing Trend]</a> <a href="https://housing-trend.herokuapp.com">Bay area housing price heat map</a></li>
-						<li class="SmartPotato"><a href="https://github.com/Sedighian/watchthis">[Smart Potato]</a> <a href="https://smart-potato.herokuapp.com">Movie aggregator</li>
-						<li class="ZipMap"><a href="">[Zip Map]</a> <a href="https://zip-map.herokuapp.com">US census on zip code boundaries</li>
-						<li class="Reformatter"><a href="https://github.com/xjlin0/ReFormatter">[Reformatter]</a> <a href="http://htmlpreview.github.io/?https://github.com/xjlin0/ReFormatter/blob/master/ReFormat004.htm">ClearCare log parser to find service gaps</li>
-						<li class="ShortShifts"><a href="https://github.com/xjlin0/ShortShifts">[ShortShifts]</a> <a href="http://htmlpreview.github.io/?https://github.com/xjlin0/ShortShifts/blob/master/ShortShifts003.htm">ClearCare log parser to find overlapped or short shifts</li>
-						<li class="Prestashop"><a href="http://SolarWholesaleDirect.com" title="Independent project: Using community published plateform, built a new B2B e-commerce site and migrated data from old database in original plateform.">[Prestashop] wholesale e-shop</a></li>
-						<li class="Bigcommerce"><a href="http://SolarLights365.com" title="Independent project: Using community published plateform, built the direct-to-consumer website, including theme customization and rpushing merchandise to sell on eBay and Facebook. Performed SEO and market analysis on SEM ads to increase sales.">[Bigcommerce] retail e-shop</a></li>
-						<li class="VirtueMart"><a href="http://Superior-Textile.com" title="Independent project: Using community published plateform, built a members-only B2B e-commerce site, including host setup, theme customization and payment gateway.">[VirtueMart] wholesale e-shop</a></li>
-						<li class="perl"><a href="http://spot.colorado.edu/~slin/cas9.html" title="Independent project: A Perl script to help molecular biology research for genome editing potential analysis by finding potential CRISPR cutting sites in given sequence.">[Perl-CGI] CRISPR/Cas9 gRNA finder</a></li>
-						<li class="Joomla"><a href="http://BoulderChineseBaptist.org" title="Independent project: Based on a community published plateform, it's site recreated after attacks using Design Control template with Shape5 Vertex framework and Bible database.">[Joomla] church website including Bible reader</a></li>
-						<li class="perl"><a href="http://spot.colorado.edu/~slin/rnai.html" title="Independent project: A Perl script to help biochemistry search for potential RNAi targets to reduce rgene expression in given sequence.">[Perl-CGI] RNAi finder</a></li>
+						<li class="HousingTrend">
+							<a href="https://github.com/xjlin0/HousingTrends"
+                               title="Maps the real estate trends of 2 million tax records in Alameda & SF counties.">
+								[Housing Trend] Bay area housing price heat map
+							</a>
+						</li>
+						<li class="SmartPotato">
+							<a href="https://github.com/Sedighian/watchthis"
+							   title="Aggregates content across several online media providers, such as Netflix, to maximize consumer choices.">
+							  [Smart Potato] Movie aggregator
+						    </a>
+						</li>
+						<li class="ZipMap">
+							<a href="https://github.com/xjlin0/ZIPmap"
+							   title="Assembles key data points from the 2010 US Census to assist in starting a new business operation.">
+								[Zip Map] US census on zip code boundaries
+							</a>
+						</li>
+						<li class="Reformatter">
+							<a href="https://github.com/xjlin0/ReFormatter">[Reformatter]</a>
+							<a href="http://htmlpreview.github.io/?https://github.com/xjlin0/ReFormatter/blob/master/ReFormat004.htm"
+							   title="Reformat the clients schedules for better representation">
+								ClearCare log parser to represent clients schedules for Care From Heart LLC
+							</li>
+						<li class="ShortShifts">
+							<a href="https://github.com/xjlin0/ShortShifts">[ShortShifts]</a>
+							<a href="http://htmlpreview.github.io/?https://github.com/xjlin0/ShortShifts/blob/master/ShortShifts003.htm"
+							   title="Identifies gaps in home care services SAAS schedules by parsing log, saving the business hours of time.">
+							ClearCare log parser to find overlapped or short shifts for Care From Heart LLC
+						</li>
+						<li class="Prestashop">
+							<a href="http://SolarWholesaleDirect.com" title="Independent project: Using community published plateform, built a new B2B e-commerce site and migrated data from old database in original plateform.">
+							[Prestashop] wholesale e-shop for Solar Wholesale Direct LLC</a>
+						</li>
+						<li class="Bigcommerce">
+							<a href="http://SolarLights365.com" title="Independent project: Using community published plateform, built the direct-to-consumer website, including theme customization and rpushing merchandise to sell on eBay and Facebook. Performed SEO and market analysis on SEM ads to increase sales.">
+							[Bigcommerce] retail e-shop for Solar Wholesale Direct LLC</a>
+						</li>
+						<li class="VirtueMart" title="Independent project: Using community published plateform, built a members-only B2B e-commerce site, including host setup, theme customization and payment gateway.">
+							[VirtueMart] wholesale e-shop for Superior-Textile LLC
+						</li>
+						<li class="perl" title="Independent project: A Perl script to help molecular biology research for genome editing potential analysis by finding potential CRISPR cutting sites in given sequence.">
+							[Perl-CGI] CRISPR/Cas9 gRNA finder for research
+						</li>
+						<li class="Joomla" title="Independent project: Based on a community published plateform, it's site recreated after attacks using Design Control template with Shape5 Vertex framework and Bible database.">
+							[Joomla] public website including Bible reader For Boulder Chinese Baptist Church
+						</li>
+						<li class="perl" title="Independent project: A Perl script to help biochemistry search for potential RNAi targets to reduce rgene expression in given sequence.">
+							[Perl-CGI] RNAi finder for research
+						</li>
 					</ul>
 				</div><!-- misc -->
 				<h4>Theme</h4>
 				<p class="licence">
-					The theme of my blog was modified from <a href="https://github.com/jekyllbootstrap/theme-the-program">the_program theme</a> based on <a href="http://jekyllbootstrap.com/">Jekyll-bootstrap</a>, powered by <a href="http://jekyllrb.com/">Jekyll</a>.
+					The theme of my blog was modified from <a href="https://github.com/jekyllbootstrap/theme-the-program">the_program theme</a> based on <a href="https://jekyllbootstrap.com/">Jekyll-bootstrap</a>, powered by <a href="https://jekyllrb.com/">Jekyll</a>.
 				</p>
 			</div><!-- unit-foot-inner -->
 		</div><!-- unit-foot -->
