add latest repo attendee

--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -59,6 +59,12 @@
 					</ul>
 					<h4>Personal Projects</h4>
 					<ul>
+						<li class="Attendee">
+							<a href="https://github.com/xjlin0/attendee"
+                               title="Help event host to arrange complicate room and transportation needs">
+								[Attendee] meeting room and transportation management for Chinese for Christ Church in Hayward
+							</a>
+						</li>
 						<li class="HousingTrend">
 							<a href="https://github.com/xjlin0/HousingTrends"
                                title="Maps the real estate trends of 2 million tax records in Alameda & SF counties.">
