fixing more links of https

--- a/_includes/my_google_search.html
+++ b/_includes/my_google_search.html
@@ -3,6 +3,6 @@
   {
     var query = document.getElementById("my-google-search").value;
     window.open("https://google.com/search?q=" + query
-  + "%20site:" + "https://xjlin0.github.io");
+  + "%20site:" + "xjlin0.github.io");
   }
 </script>
