--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -52,9 +52,9 @@
 					<h4>about</h4>
 					<ul>
 						<li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email"><a href="mailto:{{ site.author.email }}?Subject=Hello%20Jack" target="_top">{{ site.author.email }}</a></span></address></li>
-						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">GitHub.com/{{ site.author.github }}</a></li>
-						<li class="linkedin"><a href="http://www.linkedin.com/in/{{ site.author.linkedin }}/" rel="me">LinkedIn.com/in/{{ site.author.linkedin }}</a></li>
-						<li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">Twitter.com/{{ site.author.twitter }}</a></li>
+						<li class="github"><a href="https://github.com/{{ site.author.github }}/" rel="me">GitHub.com/{{ site.author.github }}</a></li>
+						<li class="linkedin"><a href="https://www.linkedin.com/in/{{ site.author.linkedin }}/" rel="me">LinkedIn.com/in/{{ site.author.linkedin }}</a></li>
+						<li class="twitter"><a href="https://twitter.com/{{ site.author.twitter }}/" rel="me">Twitter.com/{{ site.author.twitter }}</a></li>
 						<!-- <li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">Subscribe to RSS Feed</a></li> Jack commented out-->
 					</ul>
 					<h4>Personal Projects</h4>
@@ -91,7 +91,7 @@
 							</li>
 						<li class="ShortShifts">
 							<a href="https://github.com/xjlin0/ShortShifts">[ShortShifts]</a>
-							<a href="http://htmlpreview.github.io/?https://github.com/xjlin0/ShortShifts/blob/master/ShortShifts003.htm"
+							<a href="https://htmlpreview.github.io/?https://github.com/xjlin0/ShortShifts/blob/master/ShortShifts003.htm"
 							   title="Identifies gaps in home care services SAAS schedules by parsing log, saving the business hours of time.">
 							ClearCare log parser to find overlapped or short shifts for Care From Heart LLC
 						</li>
@@ -100,7 +100,7 @@
 							[Prestashop] wholesale e-shop for Solar Wholesale Direct LLC</a>
 						</li>
 						<li class="Bigcommerce">
-							<a href="http://SolarLights365.com" title="Independent project: Using community published plateform, built the direct-to-consumer website, including theme customization and rpushing merchandise to sell on eBay and Facebook. Performed SEO and market analysis on SEM ads to increase sales.">
+							<a href="https://SolarLights365.com" title="Independent project: Using community published plateform, built the direct-to-consumer website, including theme customization and rpushing merchandise to sell on eBay and Facebook. Performed SEO and market analysis on SEM ads to increase sales.">
 							[Bigcommerce] retail e-shop for Solar Wholesale Direct LLC</a>
 						</li>
 						<li class="VirtueMart" title="Independent project: Using community published plateform, built a members-only B2B e-commerce site, including host setup, theme customization and payment gateway.">
