--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -59,10 +59,10 @@
 					</ul>
 					<h4>Personal Projects</h4>
 					<ul>
-						<li class="Attendee">
-							<a href="https://github.com/xjlin0/attendee"
-                               title="Help event host to arrange complicate room and transportation needs">
-								[Attendee] meeting room and transportation management for Chinese for Christ Church in Hayward
+						<li class="Attendees">
+							<a href="https://github.com/xjlin0/attendees"
+                               title="Help event host to arrange complicate activities and meetings needs">
+								[Attendee] meeting groups and people management for organizations
 							</a>
 						</li>
 						<li class="HousingTrend">
