--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -62,7 +62,7 @@
 						<li class="Attendees">
 							<a href="https://github.com/xjlin0/attendees"
                                title="Help event host to arrange complicate activities and meetings needs">
-								[Attendee] meeting groups and people management for organizations
+								[Attendees] meeting groups/people/location management for organizations
 							</a>
 						</li>
 						<li class="HousingTrend">
