update link of attendees

--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -60,7 +60,7 @@
 					<h4>Personal Projects</h4>
 					<ul>
 						<li class="Attendees">
-							<a href="https://github.com/xjlin0/attendees"
+							<a href="https://github.com/xjlin0/attendees32"
                                title="Help event host to arrange complicate activities and meetings needs">
 								[Attendees] meeting groups/people/location management for organizations
 							</a>
