add hackathon info

--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -65,6 +65,12 @@
 								[Attendees] meeting groups/people/location management for organizations
 							</a>
 						</li>
+						<li class="CastlightHackathon">
+							<a href="https://www.castlighthealth.com/blog/life-at-castlight/castlight-hackathon-24-smoothing-out-our-castlight-kinks"
+                               title="Help enterprise to deliever application configurations on time">
+								[Hackathon] Scheduled Mass Direct Push
+							</a>
+						</li>
 						<li class="HousingTrend">
 							<a href="https://github.com/xjlin0/HousingTrends"
                                title="Maps the real estate trends of 2 million tax records in Alameda & SF counties.">
